--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Sticker Group</h1>
-Website in progress....
+Website in progress....<br>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -8,3 +8,11 @@ Website in progress....
     font-family: Montserrat;
   }
 </style>
+hi joan<br>
+Releases of website:<br>
+<a href="https://64d2fef1.stickergroup.pages.dev/">#1 64d2fef1.stickergroup.pages.dev</a><br>
+<a href="https://7ee55d2c.stickergroup.pages.dev/">#2 7ee55d2c.stickergroup.pages.dev</a><br>
+<a href="https://895e21c1.stickergroup.pages.dev/">#3 7ee55d2c.stickergroup.pages.dev</a><br>
+<script>
+ alert("Website still in progress\n also hi joan")
+</script>
