--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ Website in progress....<br>
 </style>
 hi joan<br>
 Releases of website:<br>
-<a href="https://64d2fef1.stickergroup.pages.dev/">#1 64d2fef1.stickergroup.pages.dev</a><br>
-<a href="https://7ee55d2c.stickergroup.pages.dev/">#2 7ee55d2c.stickergroup.pages.dev</a><br>
-<a href="https://895e21c1.stickergroup.pages.dev/">#3 895e21c1.stickergroup.pages.dev</a><br>
+You are currently viewing the newest version of the Sticker Group website!
 <script>
  alert("Website still in progress\n also hi joan")
 </script>
