--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Sticker Group</h1>
-Website in progress....<br>
+Release a3398pz<br>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,6 +17,7 @@ Website in progress....<br>
 </style>
 hi joan<br>
 Releases of website:<br>
+<a href="https://stickergroup.pages.dev/release-01afb78">Release 01afb78<a>
 You are currently viewing the newest version of the Sticker Group website!
 <script>
  alert("Website still in progress\n also hi joan")
