--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Release 9ee77bf<br>
 </style>
 hi joan<br>
 Releases of website:<br>
-<a href="https://stickergroup.pages.dev/release-01afb78">Release 01afb78<a>
+<a href="https://stickergroup.pages.dev/993a85e.html">Release 993a85e<a><br>
 You are currently viewing the newest version of the Sticker Group website!
 <script>
  alert("Website still in progress\n also hi joan")
