--- a/993a85e.html
+++ b/993a85e.html
@@ -17,7 +17,7 @@ Website in progress....<br>
 </style>
 hi joan<br>
 Releases of website:<br>
-You are currently viewing the newest version of the Sticker Group website!
+You are currently viewing the oldest version of the Sticker Group website!
 <script>
  alert("Website still in progress\n also hi joan")
 </script>
