--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@ Release 9ee77bf<br>
     font-family: Montserrat;
   }
 </style>
-hi joan<br>
+
 Releases of website:<br>
-<a href="https://stickergroup.pages.dev/993a85e.html">Release 993a85e<a><br>
-You are currently viewing the newest version of the Sticker Group website!
+<a href="https://stickergroup.pages.dev/993a85e.html">Release 993a85e<a>
 <script>
  alert("Website still in progress\n also hi joan")
 </script>
