--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Sticker Group</h1>
-Release 30707e1<br>
+Release 57f779a<br>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@ Release 30707e1<br>
 </style>
 
 Releases of website:<br>
-<a href="https://stickergroup.pages.dev/releases/993a85e.html">Release 993a85e<a>
+<a href="https://stickergroup.pages.dev/993a85e.html">Release 993a85e<a>
 <script>
  alert("Website still in progress\n also hi joan")
 </script>
