--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Sticker Group</title>
-</head>
-<body>
-    <h1>Sticker Group</h1>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  </head>
+<body><header class="w3-container w3-teal">
+  <h1>Sticker Group</h1>
+</header>
 Release 57f779a<br>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<style>
-  *{
-    font-family: Montserrat;
-  }
-</style>
-
-Releases of website:<br>
-<a href="https://stickergroup.pages.dev/993a85e.html">Release 993a85e<a>
-<script>
- alert("Website still in progress\n also hi joan")
-</script>
+<h6>made by andre</h6>
+<div class="w3-dropdown-hover">
+  <button class="w3-button"><h3>Older releases</h3</button>
+  <div class="w3-dropdown-content w3-bar-block w3-border w3-teal">
+    <a href="993a85e.html" class="w3-bar-item w3-button w3-teal">Release 993a85e</a>
+  </div>
+</div>
+  <div class="w3-panel w3-blue w3-display-container">
+    <span onclick="this.parentElement.style.display='none'"
+    class="w3-button w3-large w3-display-topright">&times;</span>
+    <h3>Info</h3>
+    <p>Website in progress</p>
+  </div>
+  
 </body>
 </html>
