--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <title>Sticker Group</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
-<body><header class="w3-container w3-teal">
+<body><header class="w3-container w3-green">
   <h1>Sticker Group</h1>
 </header>
-Release 14f807a<br>
-<h6>made by andre</h6>
-<div class="w3-dropdown-hover">
-  <button class="w3-button"><h3>Older releases</h3</button>
-  <div class="w3-dropdown-content w3-bar-block w3-border w3-teal">
-    <a href="993a85e.html" class="w3-bar-item w3-button w3-teal">Release 993a85e</a>
+<div class="w3-bar w3-green">
+  <div class="w3-dropdown-hover">
+    <button class="w3-button w3-light-green">Older releases</button>
+    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+      <a href="993a853.html" class="w3-bar-item w3-button w3-light-green">Release 993a85e</a>
+    </div>
   </div>
 </div>
+</div>
+<br>
+<br>
+Release 68ad17d<br>
+<h6>made by andre</h6>
+<br><br><br><br><br><br>
   <div class="w3-panel w3-blue w3-display-container">
     <span onclick="this.parentElement.style.display='none'"
     class="w3-button w3-large w3-display-topright">&times;</span>
