--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
 </div>
 <br>
 <br>
-Release 68ad17d<br>
+Release be7f7b5<br>
 <h6>made by andre</h6>
 <br><br><br><br><br><br>
   <div class="w3-panel w3-blue w3-display-container">
