--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <br>
 <br>
 Release be7f7b5<br>
-<h6>made by andre</h6>
+<h6>made by andre.</h6>
 <br><br><br><br><br><br>
   <div class="w3-panel w3-blue w3-display-container">
     <span onclick="this.parentElement.style.display='none'"
