--- a/993a85e.html
+++ b/993a85e.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Sticker Group</h1>
-Website in progress....<br>
+Website in progress...<br>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
