--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </header>
 <div class="w3-bar w3-green">
   <div class="w3-dropdown-hover">
-    <button class="w3-button w3-light-green">Older releases</button>
+    <button class="w3-button w3-light-green">Older releases(Some deployments of releases may not be active)</button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-      <a href="993a853.html" class="w3-bar-item w3-button w3-light-green">Release 993a85e</a>
+      <a href="https://869e9a91.stickergroup.pages.dev/" class="w3-bar-item w3-button w3-light-green">Release 993a85e</a>
     </div>
   </div>
 </div>
