--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Sticker Group</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 <body><header class="w3-container w3-green">
   <h1>Sticker Group</h1>
