--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <meta name="description" content="Sticker Group">
+    <meta name="author" content="thecoolguya123">
+    <meta name="keywords" content="sticker, stickergroup, sticker group">
     <title>Sticker Group</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
