--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <h1>Sticker Group</h1>
 </header>
 <div class="w3-bar w3-green">
+  <a class="w3-button w3-black w3-disabled" href="#">Members</a>
   <div class="w3-dropdown-hover">
     <button class="w3-button w3-light-green">Older releases(Some deployments of releases may not be active)</button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -24,15 +25,16 @@
 </div>
 <br>
 <br>
-Release 8e58f5a<br>
+Release 2942e92<br>
 <h6>made by andre.</h6>
-<br><br><br><br><br><br>
-  <div class="w3-panel w3-blue w3-display-container">
+<br><br><br>
+  <div class="w3-container">
+<div class="w3-panel w3-blue w3-display-container">
     <span onclick="this.parentElement.style.display='none'"
     class="w3-button w3-large w3-display-topright">&times;</span>
     <h3>Info</h3>
     <p>Website in progress</p>
   </div>
-  
+</div>  
 </body>
 </html>
