--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <button class="w3-button w3-light-green">Older releases(Some deployments of releases may not be active)</button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
       <a href="https://869e9a91.stickergroup.pages.dev/" class="w3-bar-item w3-button w3-light-green">Release 993a85e</a>
+      <a href="https://5455370c.stickergroup.pages.dev/" class="w3-bar-item w3-button w3-light-green">Release 14f807a</a>
+      <a href="https://55e7f367.stickergroup.pages.dev/" class="w3-bar-item w3-button w3-light-green">Release e6c8681</a>
     </div>
   </div>
 </div>
