--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </header>
 <div class="w3-bar w3-green">
   <a class="w3-button w3-black w3-disabled" href="#">Members</a>
+  <a class="w3-button w3-light-green" href="Game.html">Game</a>
   <div class="w3-dropdown-hover">
     <button class="w3-button w3-light-green">Older releases(Some deployments of releases may not be active)</button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
