--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <h1>Sticker Group</h1>
 </header>
 <div class="w3-bar w3-green">
-  <a class="w3-button w3-black w3-disabled" href="#">Members</a>
-<a class="w3-button w3-light-green" href="Game.html">Game</a>
+  <a class="w3-button w3-black w3-disabled" href="#">Members</a><a class="w3-button w3-light-green" href="Game.html">Game</a>
   <div class="w3-dropdown-hover">
     <button class="w3-button w3-light-green">Older releases(Some deployments of releases may not be active)</button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -28,7 +27,7 @@
 </div>
 <br>
 <br>
-Release a82892d<br>
+Release 9b6a025<br>
 <h6>made by andre.</h6>
 <br><br><br>
   <div class="w3-container">
