--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </div>
   <div class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-  <a class="w3-button w3-bar-item" href="index.html">Home</a><a class="w3-button w3-black w3-disabled w3-bar-item" href="members.html">Members</a><a class="w3-button w3-bar-item" href="Game.html">Game</a>
+  <a class="w3-button w3-bar-item" href="index.html">Home</a><a class="w3-button w3-bar-item" href="members.html">Members</a><a class="w3-button w3-bar-item" href="Game.html">Game</a>
 </div>
 <br>
 <br>
-Release 794970c<br>
+Release 0d2c4fe<br>
 <h6>made by andre.</h6>
 <br><br><br>
   <div class="w3-container">
