--- a/members.html
+++ b/members.html
@@ -27,7 +27,7 @@
 <br><br>
 <div class="w3-container w3-teal"><h2>andre</h2><img src="favicon.ico" style="height: 200px;
   "><h3>Contributions: Website, Game</h3><h3>- Is founder</h3></div><br><br>
-  <div class="w3-container w3-green"><h2>joan</h2><img src="favicon.ico" style="height: 200px;
+  <div class="w3-container w3-green"><h2>joan</h2><img src="79700-200.png" style="height: 200px;
   "><h3>Contributions: None</h3></div><br><br>
 <script>
   function w3_open() {
