--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"> 
   </head>
 <body>
-  <div class="w3-teal">
-    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
-    <div class="w3-container">
-      <h1>Sticker Group</h1>
-    </div>
-  </div>
+  <div id="main">
   <div class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
   <a class="w3-button w3-bar-item" href="index.html">Home</a><a class="w3-button w3-bar-item" href="members.html">Members</a><a class="w3-button w3-bar-item" href="Game.html">Game</a>
 </div>
+  <div class="w3-teal">
+    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()" id="openNav">☰</button>
+    <div class="w3-container">
+      <h1>Sticker Group</h1>
+    </div>
+  </div>
 <br>
 <br>
 Release d5990aa<br>
@@ -33,14 +34,19 @@ Release d5990aa<br>
     <h3>Info</h3>
     <p>Website in progress</p>
   </div>
-</div>  
+</div> 
+</div> 
 <script>
   function w3_open() {
+    document.getElementById("main").style.marginLeft = "25%";
+    document.getElementById("mySidebar").style.width = "25%";
     document.getElementById("mySidebar").style.display = "block";
   }
   
   function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("main").style.marginLeft = "0%";
+    document.getElementById("openNav").style.display = "inline-block";
   }
   </script>
 </body>
