--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"> 
   </head>
 <body>
-  <div id="main">
-  <div class="w3-sidebar w3-bar-block w3-border-right w3-card w3-animate-left" style="display:none" id="mySidebar">
-    <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-  <a class="w3-button w3-bar-item" href="index.html">Home</a><a class="w3-button w3-bar-item" href="members.html">Members</a><a class="w3-button w3-bar-item" href="Game.html">Game</a>
-</div>
-  <div class="w3-teal">
+  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar" style="display:none">
+    <div class="w3-bar w3-dark-grey">
+    <span class="w3-bar-item w3-padding-16">Menu</span>
+    <button onclick="w3_close()"
+    class="w3-bar-item w3-button w3-right w3-padding-16" title="close Sidebar">&times;</button>
+    </div>
+    <div class="w3-bar-block">
+      <a class="w3-button w3-bar-item w3-green" href="index.html">Home</a>
+      <a class="w3-button w3-bar-item" href="members.html">Members</a>
+      <a class="w3-button w3-bar-item" href="Game.html">Game</a>
+    </div>
+  </div>
+<div id="main">  
+<div class="w3-teal">
     <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()" id="openNav">☰</button>
     <div class="w3-container">
       <h1>Sticker Group</h1>
@@ -35,19 +43,18 @@ Release d5990aa<br>
     <p>Website in progress</p>
   </div>
 </div> 
-</div> 
+</div>
 <script>
   function w3_open() {
-    document.getElementById("main").style.marginLeft = "25%";
-    document.getElementById("mySidebar").style.width = "25%";
-    document.getElementById("mySidebar").style.display = "block";
-  }
-  
-  function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("main").style.marginLeft = "0%";
-    document.getElementById("openNav").style.display = "inline-block";
-  }
-  </script>
+  document.getElementById("main").style.marginLeft = "180px";
+  document.getElementById("mySidebar").style.width = "90px";
+  document.getElementById("mySidebar").style.display = "block";
+}
+function w3_close() {
+  document.getElementById("main").style.marginLeft = "0";
+  document.getElementById("mySidebar").style.display = "none";
+  document.getElementById("openNav").style.display = "inline-block";
+}
+</script>
 </body>
 </html>
