--- a/members.html
+++ b/members.html
@@ -40,17 +40,16 @@
   "><h3>Contributions: None</h3></div><br><br>
 </div>
 <script>
-  function w3_open()  { 
-    document.getElementById("main").style.marginLeft = "180px";
-    document.getElementById("mySidebar").style.width = "180px";
-    document.getElementById("mySidebar").style.display = "block";
-  }
-  
-  function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("main").style.marginLeft = "0%";
-    document.getElementById("openNav").style.display = "inline-block";
-  }
+function w3_open() {
+  document.getElementById("main").style.marginLeft = "25%";
+  document.getElementById("mySidebar").style.width = "25%";
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function w3_close() {
+  document.getElementById("main").style.marginLeft = "0%";
+  document.getElementById("mySidebar").style.display = "none";
+}
   </script>
 </body>
 </html>
