--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@ Release d5990aa<br>
 </div> 
 </div>
 <script>
-  function w3_open() {
-  document.getElementById("main").style.marginLeft = "180px";
-  document.getElementById("mySidebar").style.width = "90px";
+function w3_open() {
+  document.getElementById("main").style.marginLeft = "25%";
+  document.getElementById("mySidebar").style.width = "25%";
   document.getElementById("mySidebar").style.display = "block";
 }
+
 function w3_close() {
-  document.getElementById("main").style.marginLeft = "0";
+  document.getElementById("main").style.marginLeft = "0%";
   document.getElementById("mySidebar").style.display = "none";
-  document.getElementById("openNav").style.display = "inline-block";
 }
 </script>
 </body>
