--- a/members.html
+++ b/members.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
   </head>
 <body>
-  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar" style="display:none">
+  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar">
     <div class="w3-bar w3-dark-grey">
     <span class="w3-bar-item w3-padding-16">Menu</span>
     <button onclick="w3_close()"
@@ -22,6 +22,7 @@
       <a class="w3-button w3-bar-item" href="index.html">Home</a>
       <a class="w3-button w3-bar-item w3-green" href="members.html">Members</a>
       <a class="w3-button w3-bar-item" href="Game.html">Game</a>
+    </div>
     </div>
   </div>
   <div id="main">
