--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"> 
   </head>
 <body>
-  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar" style="display:none">
+  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar">
     <div class="w3-bar w3-dark-grey">
     <span class="w3-bar-item w3-padding-16">Menu</span>
     <button onclick="w3_close()"
     class="w3-bar-item w3-button w3-right w3-padding-16" title="close Sidebar">&times;</button>
     </div>
     <div class="w3-bar-block">
-      <a class="w3-button w3-bar-item w3-green" href="index.html">Home</a>
-      <a class="w3-button w3-bar-item" href="members.html">Members</a>
+      <a class="w3-button w3-bar-item" href="index.html">Home</a>
+      <a class="w3-button w3-bar-item w3-green" href="members.html">Members</a>
       <a class="w3-button w3-bar-item" href="Game.html">Game</a>
+    </div>
     </div>
   </div>
 <div id="main">  
