--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     class="w3-bar-item w3-button w3-right w3-padding-16" title="close Sidebar">&times;</button>
     </div>
     <div class="w3-bar-block">
-      <a class="w3-button w3-bar-item" href="index.html">Home</a>
-      <a class="w3-button w3-bar-item w3-green" href="members.html">Members</a>
+      <a class="w3-button w3-bar-item w3-green" href="index.html">Home</a>
+      <a class="w3-button w3-bar-item" href="members.html">Members</a>
       <a class="w3-button w3-bar-item" href="Game.html">Game</a>
     </div>
     </div>
