--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"> 
   </head>
 <body>
-  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px" id="mySidebar">
+  <div class="w3-sidebar w3-light-grey w3-card-4 w3-animate-left" style="width:200px; display: none;" id="mySidebar">
     <div class="w3-bar w3-dark-grey">
     <span class="w3-bar-item w3-padding-16">Menu</span>
     <button onclick="w3_close()"
