--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ Release d5990aa<br>
 <h6>made by andre.</h6>
 <br><br><br>
   <div class="w3-container">
-<div class="w3-panel w3-blue w3-display-container">
+<div class="w3-panel w3-red w3-display-container">
     <span onclick="this.parentElement.style.display='none'"
     class="w3-button w3-large w3-display-topright">&times;</span>
-    <h3>Info</h3>
-    <p>Website in progress</p>
+    <h3>Alert</h3>
+    <p>Website has been moved to <a href="http://stickergroup.web1337.net/">http://stickergroup.web1337.net/</a></p>
   </div>
 </div> 
 </div>
