--- a/members.html
+++ b/members.html
@@ -39,7 +39,15 @@
   "><h3>Contributions: Website, Game</h3><h3>- Is founder</h3></div><br><br>
   <div class="w3-container w3-green"><h2>joan</h2><img src="79700-200.png" style="height: 200px;
   "><h3>Contributions: None</h3></div><br><br>
-</div>
+  <div class="w3-container">
+<div class="w3-panel w3-red w3-display-container">
+    <span onclick="this.parentElement.style.display='none'"
+    class="w3-button w3-large w3-display-topright">&times;</span>
+    <h3>Alert</h3>
+    <p>Website has been moved to <a href="http://stickergroup.web1337.net/">http://stickergroup.web1337.net/</a></p>
+  </div>
+</div> 
+  </div>
 <script>
 function w3_open() {
   document.getElementById("main").style.marginLeft = "25%";
